fix(styling): resolve issue with footer overlapping content above
set margin-bottom to 4% on the `body`, because the footer is fixed position the content above would be covered on smaller screen. increasing the margin-bottom means there is space below so you can scroll slightly further down the screen.

--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -7,7 +7,7 @@ body {
   height: 100vh;
   font-size: 22px;
   padding: 0;
-  margin: 0;
+  margin:  0 0 4% 0;;
 }
 
 /* Website wide stuff end */
@@ -74,16 +74,14 @@ body {
 }
 
 .gif {
-  height: 440px;
-  max-width: 840px;
-  width: 70%;
+  height: 35%;
+  max-width: 35%;
   margin: 0 auto;
   overflow: hidden;
   background-image: url('../images/digitalocean_vpc.gif');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  display: block;
   outline: 5px double #677b63;
 }
 
@@ -97,7 +95,7 @@ body {
 
 .box {
   height: 440px;
-  max-width: 840px;
+  max-width: 35%;
   width: 70%;
   margin: 0 auto;
   overflow: hidden;
@@ -134,7 +132,7 @@ body {
 }
 
 .square-content a:hover {
-  color: rgb(187, 187, 187);
+  color: rgb(255, 255, 255);
 }
 
 /* Index container end  */
